2007-06-19	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp: show filenames in caption.

2007-06-17	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/defines.h: include *.rec in DEFAULT_LOADFILTER.

2007-06-17	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcutbase.ui: add accelerators for st(A)rt, e(N)d,
	  (C)hapter and (B)ookmark.

	* src/defines.h: include *.vdr and *.tts in DEFAULT_LOADFILTER.

2007-06-12	Michael Riepe  <too-tired@users.sourceforge.net>

	* Windows build script & README update by Ralph Glasstetter.

2007-06-03	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpegmuxer.cpp: fix size calculation.

2007-05-30	Michael Riepe  <too-tired@users.sourceforge.net>

	* src/streamdata.cpp: add missing #include <assert.h>

2007-05-29	Michael Riepe  <too-tired@users.sourceforge.net>

	* audio_addpts() patch by Wolfram Gloger.

	* Code cleanup + beautification by myself.

	* src/index.cpp: remove false "missing frame" alarms.

2007-05-27	Michael Riepe  <too-tired@users.sourceforge.net>

	* Add batch mode. You can now call "dvbcut -batch <project>.prj"
	  and dvbcut will export the file in your preferred format
	  (default is DVB format using the dvbcut muxer). Note that the
	  project file is essential because it contains the cut list.
	  The name of the output file will be "<project>.mpg". If
	  that file already exists, dvbcut adds numeric suffixes
	  (e.g. "<project>_1.mpg") until the name is unique.

2007-05-13	Michael Riepe  <too-tired@users.sourceforge.net>

	* lavfmuxer.cpp: include patch from Wolfram Gloger.

	* When using the mouse wheel, limit position to [0...pictures-1].

2007-05-09  Sven Over  <svenover@svenover.de>

	* Added generic dvbcut_exception class.

	* Got rid of libavcodec usage in playaudio.cpp. Instead, libmad and
	liba52 are now used. SCons files changed accordingly.

2007-05-06	Michael Riepe  <too-tired@users.sourceforge.net>

	* Remember last used export format.
